trigonometric logarthmic and exponential functions learned

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -280,17 +280,51 @@
      "text": [
       "[0.         1.57079633 3.14159265]\n",
       "[0.0000000e+00 1.0000000e+00 1.2246468e-16]\n",
-      "[0.0000000e+00 1.0000000e+00 1.2246468e-16]\n"
+      "[ 1.000000e+00  6.123234e-17 -1.000000e+00]\n",
+      "[ 0.00000000e+00  1.63312394e+16 -1.22464680e-16]\n",
+      "[-1, 0, 1]\n",
+      "[-1.57079633  0.          1.57079633]\n",
+      "[3.14159265 1.57079633 0.        ]\n",
+      "[-0.78539816  0.          0.78539816]\n",
+      "[ 2.71828183  7.3890561  20.08553692]\n",
+      "[2. 4. 8.]\n",
+      "[0.        1.        1.5849625]\n",
+      "[0.         0.30103    0.47712125]\n",
+      "exp(x) - 1 = [0.         0.0010005  0.01005017 0.10517092]\n",
+      "log(1 + x) = [0.         0.0009995  0.00995033 0.09531018]\n",
+      "3^x   = [1.         1.00109922 1.01104669 1.11612317]\n"
      ]
     }
    ],
    "source": [
-    "#dealing with angles\n",
+    "\n",
     "theta = np.linspace(0,np.pi,3)\n",
     "print(theta)\n",
     "print(np.sin(theta))\n",
-    "print(np.cos(theta))"
+    "print(np.cos(theta))\n",
+    "print(np.tan(theta))\n",
+    "x = [-1, 0, 1]\n",
+    "print(x)\n",
+    "print( np.arcsin(x))\n",
+    "print( np.arccos(x))\n",
+    "print( np.arctan(x))\n",
+    "x = [1,2,3]\n",
+    "print(np.exp(x))\n",
+    "print(np.exp2(x))\n",
+    "print(np.log2(x))\n",
+    "print(np.log10(x))\n",
+    "x = [0, 0.001, 0.01, 0.1]\n",
+    "print(\"exp(x) - 1 =\", np.expm1(x))\n",
+    "print(\"log(1 + x) =\", np.log1p(x))\n",
+    "print(\"3^x   =\", np.power(3, x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
