--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#trigonometric, logarthmic and exponential functions\n",
     "theta = np.linspace(0,np.pi,3)\n",
     "print(theta)\n",
     "print(np.sin(theta))\n",
@@ -321,10 +321,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0. 10. 20. 30. 40.]\n",
+      "[ 1.  0.  2.  0.  4.  0.  8.  0. 16.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#For large calculations, it is sometimes useful to be able to specify the array where the result of the calculation will be stored. Rather than creating a temporary array, this can be used to write computation results directly to the memory location where you'd like them to be\n",
+    "x = np.arange(5)\n",
+    "y = np.empty(5)\n",
+    "# print(x,y)\n",
+    "np.multiply(x, 10, y)\n",
+    "print(y)\n",
+    "y = np.zeros(10)\n",
+    "np.power(2,x, y[::2])\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "120\n",
+      "[ 1  3  6 10 15]\n",
+      "[  1   2   6  24 120]\n",
+      "[[ 1  2  3  4  5]\n",
+      " [ 2  4  6  8 10]\n",
+      " [ 3  6  9 12 15]\n",
+      " [ 4  8 12 16 20]\n",
+      " [ 5 10 15 20 25]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#aggregates like reduce, accumulate, outer\n",
+    "x = np.arange(1,6)\n",
+    "print(np.add.reduce(x))\n",
+    "print(np.multiply.reduce(x))\n",
+    "print(np.add.accumulate(x))\n",
+    "print(np.multiply.accumulate(x))\n",
+    "print(np.multiply.outer(x,x))"
+   ]
   }
  ],
  "metadata": {
