learning aggregations in numpy

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -375,6 +375,48 @@
     "print(np.multiply.accumulate(x))\n",
     "print(np.multiply.outer(x,x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47.23667917192546\n",
+      "0.9999778452090398\n",
+      "1.4618569125435243e-05\n",
+      "[[0.78079815 0.0631284  0.43856358 0.32974972]\n",
+      " [0.23039523 0.3155974  0.38551725 0.33281114]\n",
+      " [0.87458746 0.7314638  0.99504376 0.84022477]]\n",
+      "0.9950437570658559\n",
+      "[0.87458746 0.7314638  0.99504376 0.84022477]\n",
+      "[0.0631284  0.23039523 0.7314638 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Aggregations\n",
+    "np.random.seed(100)\n",
+    "#numpy aggregates are faster than python's built in functions\n",
+    "L=np.random.random(100)\n",
+    "print(np.sum(L))\n",
+    "# %timeit sum(L)\n",
+    "# %timeit sum(L)\n",
+    "\n",
+    "big_array = np.random.random(10000)\n",
+    "print(np.max(big_array))\n",
+    "print(np.min(big_array))\n",
+    "\n",
+    "#multi-dimensional aggregates\n",
+    "m = np.random.random((3,4))\n",
+    "print(m)\n",
+    "print(np.max(m))\n",
+    "print(np.max(m, axis = 0))\n",
+    "print(np.min(m, axis = 1))\n"
+   ]
   }
  ],
  "metadata": {
