--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,13 @@
       " [0.87458746 0.7314638  0.99504376 0.84022477]]\n",
       "0.9950437570658559\n",
       "[0.87458746 0.7314638  0.99504376 0.84022477]\n",
-      "[0.0631284  0.23039523 0.7314638 ]\n"
+      "[0.0631284  0.23039523 0.7314638 ]\n",
+      "179.9\n",
+      "194\n",
+      "165\n",
+      "179.5\n",
+      "173.0\n",
+      "187.25\n"
      ]
     }
    ],
@@ -415,7 +421,78 @@
     "print(m)\n",
     "print(np.max(m))\n",
     "print(np.max(m, axis = 0))\n",
-    "print(np.min(m, axis = 1))\n"
+    "print(np.min(m, axis = 1))\n",
+    "\n",
+    "heights = np.random.randint(165, 195, 40)\n",
+    "print(heights.mean())\n",
+    "print(heights.max())\n",
+    "print(heights.min())\n",
+    "print(np.median(heights))\n",
+    "print(np.percentile(heights, 25))\n",
+    "print(np.percentile(heights, 75))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 2. 3.]\n",
+      " [1. 2. 3.]\n",
+      " [1. 2. 3.]]\n",
+      "[[0 1 2]\n",
+      " [1 2 3]\n",
+      " [2 3 4]]\n",
+      "[[1. 2. 3.]\n",
+      " [1. 2. 3.]]\n",
+      "[[0 1 2]\n",
+      " [1 2 3]\n",
+      " [2 3 4]]\n",
+      "[[0.2466513  0.73123811 0.53732235]\n",
+      " [0.69062723 0.24385117 0.08959863]\n",
+      " [0.60368355 0.06093166 0.6375412 ]\n",
+      " [0.4600968  0.49012255 0.49073011]\n",
+      " [0.61283661 0.96067534 0.12767708]\n",
+      " [0.85683027 0.51715666 0.85618248]\n",
+      " [0.47791611 0.0091482  0.9985442 ]\n",
+      " [0.60220472 0.2577063  0.00845857]\n",
+      " [0.55298659 0.65739389 0.63940919]\n",
+      " [0.48412326 0.93801398 0.8844734 ]] [0.55879564 0.48662379 0.52699372]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#broadcasting\n",
+    "a = np.array([0,1,2])\n",
+    "b = np.array([5, 5, 5])\n",
+    "M = np.ones((3,3))\n",
+    "print(M+a)\n",
+    "a = np.arange(3)\n",
+    "b = np.arange(3)[:, np.newaxis]\n",
+    "print(a+b)\n",
+    "#both a and b are stretched to aquire a geometry that would ease the operation, this is broadcasting\n",
+    "\n",
+    "#broadcasting rules\n",
+    "#1 if the two arrays differ in their number of dimensions, the shape of the one with fewer dimensions is padded with ones on its leading (left) side.\n",
+    "M = np.ones((2, 3))\n",
+    "a = np.arange(3)\n",
+    "print(M+a)\n",
+    "\n",
+    "#2 If the shape of the two arrays does not match in any dimension, the array with shape equal to 1 in that dimension is stretched to match the other shape.\n",
+    "a = np.arange(3).reshape((3, 1))\n",
+    "b = np.arange(3) #has dimension (3,) and not (3,1) since numpy 1d arrays has only one axis\n",
+    "print(a+b)\n",
+    "\n",
+    "#3 broadcasting falls apart if its's not feasible to attain equal gemoetry\n",
+    "\n",
+    "#Centering of array using broadcasting\n",
+    "a = np.random.random((10,3))\n",
+    "amean = a.mean(axis = 0)\n",
+    "acen"
    ]
   }
  ],
