learning pandas objects

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,12 +44,12 @@
       " [3.14 3.14 3.14 3.14 3.14]\n",
       " [3.14 3.14 3.14 3.14 3.14]]\n",
       "[ 0  2  4  6  8 10 12 14 16 18]\n",
-      "[[0.81216873 0.47997717 0.3927848 ]\n",
-      " [0.83607876 0.33739616 0.64817187]\n",
-      " [0.36824154 0.95715516 0.14035078]]\n",
-      "[[0 2 3]\n",
-      " [8 1 3]\n",
-      " [3 3 7]]\n",
+      "[[0.88813181 0.1339567  0.11229086]\n",
+      " [0.34195796 0.44047926 0.028289  ]\n",
+      " [0.49447143 0.68396186 0.74069599]]\n",
+      "[[4 1 0]\n",
+      " [3 9 8]\n",
+      " [4 8 0]]\n",
       "[3. 2. 1.]\n"
      ]
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -452,16 +452,25 @@
       "[[0 1 2]\n",
       " [1 2 3]\n",
       " [2 3 4]]\n",
-      "[[0.2466513  0.73123811 0.53732235]\n",
-      " [0.69062723 0.24385117 0.08959863]\n",
-      " [0.60368355 0.06093166 0.6375412 ]\n",
-      " [0.4600968  0.49012255 0.49073011]\n",
-      " [0.61283661 0.96067534 0.12767708]\n",
-      " [0.85683027 0.51715666 0.85618248]\n",
-      " [0.47791611 0.0091482  0.9985442 ]\n",
-      " [0.60220472 0.2577063  0.00845857]\n",
-      " [0.55298659 0.65739389 0.63940919]\n",
-      " [0.48412326 0.93801398 0.8844734 ]] [0.55879564 0.48662379 0.52699372]\n"
+      "[[0.32934097 0.1463945  0.09409146]\n",
+      " [0.80132735 0.7807591  0.02179517]\n",
+      " [0.03205985 0.89143885 0.71103799]\n",
+      " [0.28829586 0.26469191 0.58766818]\n",
+      " [0.26270796 0.66366577 0.0810968 ]\n",
+      " [0.68316547 0.53505198 0.09941671]\n",
+      " [0.32414402 0.05058435 0.58846149]\n",
+      " [0.81131195 0.04144796 0.74452354]\n",
+      " [0.1747717  0.91948267 0.33171649]\n",
+      " [0.40719949 0.54363348 0.54336548]] [0.41143246 0.48371506 0.38031733] [[-0.08209149 -0.33732055 -0.28622587]\n",
+      " [ 0.38989489  0.29704404 -0.35852216]\n",
+      " [-0.37937261  0.40772379  0.33072066]\n",
+      " [-0.1231366  -0.21902315  0.20735085]\n",
+      " [-0.1487245   0.17995072 -0.29922053]\n",
+      " [ 0.27173301  0.05133692 -0.28090062]\n",
+      " [-0.08728845 -0.43313071  0.20814416]\n",
+      " [ 0.39987949 -0.4422671   0.36420621]\n",
+      " [-0.23666076  0.43576762 -0.04860084]\n",
+      " [-0.00423298  0.05991842  0.16304815]]\n"
      ]
     }
    ],
@@ -492,15 +501,23 @@
     "#Centering of array using broadcasting\n",
     "a = np.random.random((10,3))\n",
     "amean = a.mean(axis = 0)\n",
-    "acen"
+    "acentred = a - amean\n",
+    "print(a, amean, acentred)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
