Learnt comparison operators, boolean arrays, counting entries using boolean arrays, using boolean mask to filter elements from the array

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -507,6 +507,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True False False False] [False False False  True  True] [ True  True  True False False] [False False  True  True  True] [ True  True False  True  True] [False False  True False False]\n",
+      "[False  True False False False]\n",
+      "[[6 3 7 4]\n",
+      " [6 9 2 6]\n",
+      " [7 4 3 7]]\n",
+      "[[False  True False  True]\n",
+      " [False False  True False]\n",
+      " [False  True  True False]]\n",
+      "5\n",
+      "5\n",
+      "[2 1 2]\n",
+      "True\n",
+      "False\n",
+      "[ True False  True]\n",
+      "6\n",
+      "[7 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# comparison operators\n",
+    "\n",
+    "x = np.array([1,2,3,4,5])\n",
+    "print(x<3, x>3, x<=3, x>=3, x!=3, x==3)\n",
+    "print((2 * x) == (x ** 2))\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "x = np.random.randint(10, size=(3, 4), dtype = int)\n",
+    "print(x)\n",
+    "print(x < 6)\n",
+    "\n",
+    "\n",
+    "#counting no of true entries \n",
+    "count = np.count_nonzero(x<6)\n",
+    "print(count)\n",
+    "sum = np.sum(x<6)\n",
+    "print(sum)\n",
+    "sum = np.sum(x < 6, axis = 1)#true entries in each row\n",
+    "print(sum)\n",
+    "print(np.any(x > 8))\n",
+    "print(np.all(x == 6))\n",
+    "print(np.all(x < 8, axis=1))\n",
+    "print(np.sum((x > 5) & (x < 8)))#using logical operators\n",
+    "\n",
+    "#Maksing\n",
+    "x = np.random.randint(10, size = (3,4), dtype=int)\n",
+    "print(x[x>5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
