--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -224,6 +224,58 @@
     "indB = pd.Index([2, 3, 5, 7, 11])\n",
     "print(indA & indB, indA | indB, indA ^ indB)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f7048620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    0.25\n",
+      "b    0.50\n",
+      "c    0.75\n",
+      "d    1.00\n",
+      "dtype: float64 0.5\n",
+      "True\n",
+      "Index(['a', 'b', 'c', 'd'], dtype='object')\n",
+      "<zip object at 0x16842d5c0>\n",
+      "1.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#series as dictionary\n",
+    "data = pd.Series([0.25, 0.5, 0.75, 1.0], index = ['a', 'b', 'c', 'd'])\n",
+    "print(data, data['b'])\n",
+    "print('a' in data)\n",
+    "print(data.keys())\n",
+    "print(data.items())\n",
+    "data['e'] = 1.25\n",
+    "print(data['e'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62c452e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c601722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Series as one dimensional array\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
