--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
     "print((2 * x) == (x ** 2))\n",
     "\n",
     "np.random.seed(42)\n",
-    "x = np.random.randint(10, size=(3, 4), dtype = int)\n",
+    "x = np.random.randint(10, size=(3, 4))\n",
     "print(x)\n",
     "print(x < 6)\n",
     "\n",
@@ -565,17 +565,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[49 53  3]\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "[ 2  5 11]\n",
+      "[[ 2  1  3]\n",
+      " [ 6  5  7]\n",
+      " [10  9 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Fancy indexing\n",
+    "np.random.randint(42)\n",
+    "x = np.random.randint(100, size = 10)\n",
+    "ind = [3,7,4]\n",
+    "print(x[ind])\n",
+    "ind = np.array([[3,7], [4,5]])\n",
+    "x[ind]\n",
+    "X = np.arange(12).reshape((3, 4))\n",
+    "print(X)\n",
+    "row = np.array([0, 1, 2])\n",
+    "col = np.array([2, 1, 3])\n",
+    "print(X[row, col])\n",
+    "print(X[row[:, np.newaxis], col])\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50  6 20 72 38 17  3 88 59 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#combined indexing\n",
+    "print(X)"
+   ]
   }
  ],
  "metadata": {
